packages/bff-wasm/fixtures/errors/invalid-param-name/app.ts
import { GET } from "bff";

export default {
  [`/hello/{ida}`]: {
    get: async (id: string): Promise<string> => `Hello ${id}!`,
  },
};
